# YourOwnNFS

./: CMakeLists.txt  README.md  client.c  client_f.c  glu_globals.h  glu_requests.c  glu_requests.h  glu_responses.c  glu_responses.h  makefile  server.c  server_f.c
CMake/: FindFUSE.cmake
